# robustranking

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  setup.py
Experiments/: SAT2016.ipynb  main.ipynb  multiple_test_corrections.ipynb
Experiments/Rundata/sc2022-detailed-results/: anni-clo.csv  anni-seq.csv  main-clo-unsat.csv  main-clo.csv  main-par-sat.csv  main-par.csv  main-seq-sat.csv  main-seq.csv  nolimits.csv
Experiments/examples/: SAT2016.ipynb  SAT2020.ipynb  SAT2023.ipynb
Experiments/examples/Rundata/sc2022-detailed-results/: anni-clo-sat.csv  anni-par-unsat.csv  anni-par.csv  anni-seq-sat.csv  main-clo-sat.csv  main-par-unsat.csv  main-seq-unsat.csv
Experiments/robustranking/: __init__.py  benchmark.py  comparison.py  utils.py
Experiments/robustranking/comparison/: __init__.py  abstract_comparison.py  aggregated_comparison.py  bootstrap_comparison.py  mo_bootstrap_comparison.py
Experiments/robustranking/utils/: __init__.py  metrics.py  multiobjective.py  plots.py
Experiments/scripts/: CEC2019.ipynb  main.ipynb
examples/: SAT2016.ipynb  TSP.ipynb
examples/Rundata/sc2016-detailed-results/: main.csv
examples/Rundata/sc2022-detailed-results/: anni-clo-unsat.csv  anni-par-sat.csv  anni-seq-unsat.csv
robustranking/: __init__.py  _comparison.py  _utils.py  benchmark.py
robustranking/comparison/: __init__.py  aggregated_comparison.py  bootstrap_comparison.py  mo_bootstrap_comparison.py  mo_domination_bootstrap_comparison.py  ranked_comparison.py
robustranking/utils/: __init__.py  metrics.py  plots.py
scripts/: CEC2019.ipynb  main.py  multiobjective.py
src/robustranking/: __init__.py  benchmark.py
src/robustranking/comparison/: abstract_comparison.py  mo_bootstrap_comparison.py  mo_domination_bootstrap_comparison.py  ranked_comparison.py
src/robustranking/utils/: metrics.py  multiobjective.py
tests/: test_imports.py
tests/utils/: test_metrics.py
